--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "create-nodejs-express-app",
+  "name": "purifyr-backend",
   "version": "1.7.0",
-  "description": "Create a Node.js app for building production-ready RESTful APIs using Express, by running one command",
+  "description": "Restful API for Purifyr",
   "bin": "bin/createNodejsApp.js",
   "main": "src/index.js",
   "repository": "https://github.com/hagopj13/node-express-boilerplate.git",
-  "author": "Hagop Jamkojian <hagopj13@gmail.com>",
+  "author": "Ahmosys <ahmosyspro@protonmail.com>",
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
